fix overflow cover

--- a/bonus/css/style.css
+++ b/bonus/css/style.css
@@ -298,11 +298,15 @@ aside a:hover > img{
   display: flex;
   justify-content: flex-start;
   flex-wrap: wrap;
+  max-width: 100%;
+  max-height: 300px;
+  overflow: hidden;
   margin: 20px 0;
 }
 
 .sq{
   width: 15.3vw;
+  height: 300px;
   margin-right: 15px;
 }
 
